--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                         </li>
                     </ul>
                 </nav>
+                <a href="./pages/entrance.html" class="header__entrance">
+                    Войти
+                </a>
                 <a href="./pages/basket.html" class="header__basket">
                     <img src="./iconsvg/basket-full.svg" class="basketFull">
                 </a>
