--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="ru">
 
 <head>
@@ -44,6 +44,9 @@
                         </li>
                     </ul>
                 </nav>
+                <a href="./pages/entrance.html" class="header__entrance">
+                    Войти
+                </a>
                 <a href="./pages/basket.html" class="header__basket">
                     <img src="./iconsvg/basket-full.svg" class="basketFull">
                 </a>
@@ -71,7 +74,7 @@
                     </div> 
                 </div>
                 <div class="main-block__image _image-back">
-                    <img src="img/main_page/gray_house.jpg" alt="cover">
+                    <img src="img/main_page/mod_house.jpg" alt="cover">
                 </div>
             </div>
             <div class="home-page__middle-block middle-block">
